Use a smaller font size for the welcome message

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
 
 <div class="container-fluid text-center">
-  <h1 class="display-3">Welcome,</h1>
-  <h1 class="display-4>"> I'm Apostolis.</h1>
+  <h1 class="display-5">Welcome, I'm Apostolis.</h1>
   <br>
 
   <div class="row">
