--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   </div>
   <div class="col-md-8"
     <p>
+       PIn this implied reality: Software engineer. He likes long walks, web development and studying theoretical computer science.
+       Thus, he’s trying to understand cosmology.
+    </p>
+    <p>
       I love being part of projects that have potential to change how we use
       technology every single day.</p>
     <p>
